# library-registry-submission-parser

./: .codespellrc  .editorconfig  .gitignore  README.md  Taskfile.yml  go.mod  go.sum  main.go  main_test.go  pyproject.toml
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: config.yml
.github/workflows/: check-go-dependencies-task.yml  check-go-task.yml  check-go.yml  check-license.yml  check-prettier-formatting-task.yml  check-prettier-formatting.yml  check-python-task.yml  check-python.yml  release.yml  spell-check-task.yml  spell-check.yml  test-go-integration-task.yml  test-go-task.yml  test-go.yml  test-integration.yml
test/: test_all.py
test/testdata/duplicates-in-submission/: diff.txt
test/testdata/list-rename-diff/: diff.txt
test/testdata/modification/: diff.txt
test/testdata/no-library-properties/: diff.txt
test/testdata/non-list-diff/: diff.txt
test/testdata/not-git-clone-url/: diff.txt
test/testdata/not-supported-git-host/: diff.txt
test/testdata/removal/: diff.txt
test/testdata/type-arduino/: diff.txt
test/testdata/type-partner/: diff.txt
test/testdata/url-error/: diff.txt
tests/: __init__.py  test_all.py
tests/testdata/already-in-library-manager/: diff.txt
tests/testdata/list-deleted-diff/: diff.txt
tests/testdata/multi-file-diff/: diff.txt
tests/testdata/no-final-newline-diff/: diff.txt
tests/testdata/no-tags/: diff.txt
tests/testdata/resolved-already-in-library-manager/: diff.txt  repositories.txt
tests/testdata/some-owner-access-deny/: diff.txt
tests/testdata/submitter-access-deny/: repositories.txt
tests/testdata/type-contributed/: diff.txt
tests/testdata/type-partner/: diff.txt
(+6 files in other folders)
