[tool.poetry]
name = "library-registry-submission-parser"
version = "0.0.0"
description = "Arduino Library Manager submission parser"
authors = ["Arduino <info@arduino.cc>"]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
black = "^25.1"
flake8 = "^7.1.1"
pep8-naming = "^0.14.1"
codespell = "^2.4.0"
pytest = "8.3.4"
invoke = "2.2.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
target-version = ["py39"]
