[tool.poetry]
name = "library-registry-submission-parser"
version = "0.0.0"
description = "Arduino Library Manager submission parser"
authors = ["Arduino <info@arduino.cc>"]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
black = "^25.1"
flake8 = "^7.2.0"
pep8-naming = "^0.15.1"
codespell = "^2.4.1"
pytest = "8.4.0"
invoke = "2.2.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
target-version = ["py39"]
